# mulle-testallocator

./: .gitignore  .touch  .travis.yml  CMakeLists.txt  README.md  RELEASENOTES.md  clib.json  mulle-testallocator.sublime-project  package.json
.github/workflows/: semgrep.yml
.mulle/etc/env/: auxscope  environment-host-ci-prerelease.sh  environment-host-travis-ci-prerelease.sh  environment-project.sh  environment-user-nat-os-linux.sh  environment-user-nat.sh
.mulle/etc/project/: version-info.sh
.mulle/etc/sourcetree/: config
.mulle/share/sourcetree/: config
assets/dox/: TOC.md
cmake/: DependenciesAndLibraries.cmake  Headers.cmake  _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/reflect/: _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/share/: Environment.cmake  Executable.cmake  StandaloneC.cmake  StartupC.cmake
cola/: add.md.bud  api.md.bud  description.md.bud  example.md.bud  properties.plist  usage.md.bud
dox/: API_TESTALLOCATOR.md
src/: _mulle-testallocator-include  _mulle-testallocator-include-private.h  _mulle-testallocator-include.h  include.h  mulle-testallocator-struct.h  mulle-testallocator.c  mulle-testallocator.h  pointerarray.h  pointerset.h
src/generic/: include-private.h  include.h
src/reflect/: _mulle-testallocator-include-private.h  _mulle-testallocator-include.h  _mulle-testallocator-provide.h  _mulle-testallocator-versioncheck.h
test/: include.h
test/.mulle-env/share/: environment-project.sh  mulle-test
test/checks/: badfree.c  doublefree.c  goodfree.c  leak.c  noleak.c  scribble.c  scribble.stdout
(+5 files in other folders)
